--- a/src/Club/ShopBundle/Resources/views/Dashboard/order_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Dashboard/order_table.html.twig
@@ -1,35 +1,41 @@
-<h2><img src="{{ asset('bundles/clublayout/images/icons/32x32/cart.png') }}" /> {% trans %}Open orders{% endtrans %}</h2>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        {% trans %}Open orders{% endtrans %}
+    </div>
+    <div class="panel-body">
+        <h2><img src="{{ asset('bundles/clublayout/images/icons/32x32/cart.png') }}" /> {% trans %}Open orders{% endtrans %}</h2>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>{% trans %}Order number{% endtrans %}</th>
-      <th>{% trans %}User{% endtrans %}</th>
-      <th>{% trans %}Price{% endtrans %}</th>
-      <th>{% trans %}Status{% endtrans %}</th>
-      <th>{% trans %}Created at{% endtrans %}</th>
-      <th>{% trans %}Updated at{% endtrans %}</th>
-      <th class="action">{% trans %}Action{% endtrans %}</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for order in orders %}
-    <tr class="warning">
-      <td>{{ order.orderNumber }}</td>
-      <td>{{ order.user.profile.firstName }} {{ order.user.profile.lastName }}</td>
-      <td>{{ order.price|club_price }}</td>
-      <td>{{ order.orderStatus.statusName }}</td>
-      <td>{{ order.createdAt|club_datetime }}</td>
-      <td>{{ order.updatedAt|club_datetime }}</td>
-      <td>
-        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('shop_order_edit', { 'id':order.id })} %}
-      </td>
-    </tr>
-  {% else %}
-  <tr>
-    <td colspan="7">{% trans %}There are no orders.{% endtrans %}</td>
-  </tr>
-  {% endfor %}
-  </tbody>
-</table>
-
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>{% trans %}Order number{% endtrans %}</th>
+                    <th>{% trans %}User{% endtrans %}</th>
+                    <th>{% trans %}Price{% endtrans %}</th>
+                    <th>{% trans %}Status{% endtrans %}</th>
+                    <th>{% trans %}Created at{% endtrans %}</th>
+                    <th>{% trans %}Updated at{% endtrans %}</th>
+                    <th class="action">{% trans %}Action{% endtrans %}</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for order in orders %}
+            <tr class="warning">
+                <td>{{ order.orderNumber }}</td>
+                <td>{{ order.user.profile.firstName }} {{ order.user.profile.lastName }}</td>
+                <td>{{ order.price|club_price }}</td>
+                <td>{{ order.orderStatus.statusName }}</td>
+                <td>{{ order.createdAt|club_datetime }}</td>
+                <td>{{ order.updatedAt|club_datetime }}</td>
+                <td>
+                    {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('shop_order_edit', { 'id':order.id })} %}
+                </td>
+            </tr>
+            {% else %}
+            <tr>
+                <td colspan="7">{% trans %}There are no orders.{% endtrans %}</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
