--- a/src/Club/BookingBundle/Resources/views/Overview/information.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/information.html.twig
@@ -1,40 +1,43 @@
-<div class="well">
-    <h3>{% trans %}Booking Information{% endtrans %}</h3>
-    <dl class="dl-horizontal">
-        <dt>{% trans %}Location{% endtrans %}</dt>
-        <dd>{{ interval.field.location.locationName }}</dd>
-        <dt>{% trans %}Date{% endtrans %}</dt>
-        <dd>{{ date|club_date }}</dd>
-        <dt>{% trans %}Time{% endtrans %}</dt>
-        <dd>{{ interval.startTime|club_time }} - {{ interval.stopTime|club_time }}</dd>
-        <dt>{% trans %}Field{% endtrans %}</dt>
-        <dd>{{ interval.field.name }}</dd>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        {% trans %}Booking Information{% endtrans %}
+    </div>
+    <div class="panel-body">
+        <dl class="dl-horizontal">
+            <dt>{% trans %}Location{% endtrans %}</dt>
+            <dd>{{ interval.field.location.locationName }}</dd>
+            <dt>{% trans %}Date{% endtrans %}</dt>
+            <dd>{{ date|club_date }}</dd>
+            <dt>{% trans %}Time{% endtrans %}</dt>
+            <dd>{{ interval.startTime|club_time }} - {{ interval.stopTime|club_time }}</dd>
+            <dt>{% trans %}Field{% endtrans %}</dt>
+            <dd>{{ interval.field.name }}</dd>
 
-        {% if interval.booking %}
-        <dt>{% trans %}Booker{% endtrans %}</dt>
-        <dd>{{ interval.booking.user.name }}</dd>
-        {% if interval.booking.guest %}
-        <dt>{% trans %}Partner{% endtrans %}</dt>
-        <dd>Guest</dd>
-        {% else %}
-        <dt>{% trans %}Partner{% endtrans %}</dt>
-        <dd>
-        {% for partner in interval.booking.users %}
-        {{ partner.name }},
-        {% endfor %}
-        </dd>
+            {% if interval.booking %}
+            <dt>{% trans %}Booker{% endtrans %}</dt>
+            <dd>{{ interval.booking.user.name }}</dd>
+            {% if interval.booking.guest %}
+            <dt>{% trans %}Partner{% endtrans %}</dt>
+            <dd>Guest</dd>
+            {% else %}
+            <dt>{% trans %}Partner{% endtrans %}</dt>
+            <dd>
+            {% for partner in interval.booking.users %}
+            {{ partner.name }},
+            {% endfor %}
+            </dd>
+            {% endif %}
+
+            {% elseif interval.schedule %}
+            <dt>{% trans %}Team{% endtrans %}</dt>
+            <dd>{{ interval.schedule.team.teamName }}</dd>
+
+            {% endif %}
+        </dl>
+
+        {% if interval.field.information %}
+        <h3>{% trans %}Information{% endtrans %}</h3>
+        <p>{{ interval.field.information }}</p>
         {% endif %}
-
-        {% elseif interval.schedule %}
-        <dt>{% trans %}Team{% endtrans %}</dt>
-        <dd>{{ interval.schedule.team.teamName }}</dd>
-
-        {% endif %}
-    </dl>
-
-    {% if interval.field.information %}
-      <h3>{% trans %}Information{% endtrans %}</h3>
-      <p>{{ interval.field.information }}</p>
-    {% endif %}
-
+    </div>
 </div>
