--- a/src/Club/BookingBundle/Resources/views/Booking/addMe.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/addMe.html.twig
@@ -1,7 +1,11 @@
-    <div class="col-sm-6">
-        <div class="well">
-        <h3>{% trans %}Booking{% endtrans %}</h3>
-        <p>{% trans %}You can participate in this booking as well, click on the button below.{% endtrans %}</p>
-        <a href="{{ path('club_booking_booking_addme', {'id':booking.id}) }}" class="btn btn-primary">{% trans %}Add me{% endtrans %}</a>
+<div class="col-sm-6">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            {% trans %}Booking{% endtrans %}
+        </div>
+        <div class="panel-body">
+            <p>{% trans %}You can participate in this booking as well, click on the button below.{% endtrans %}</p>
+            <a onclick="return confirm('{% trans %}Are you sure?{% endtrans %}');" href="{{ path('club_booking_booking_addme', {'id':booking.id}) }}" class="btn btn-primary">{% trans %}Add me{% endtrans %}</a>
         </div>
     </div>
+</div>
