--- a/src/Club/BookingBundle/Resources/views/Booking/attend_team.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/attend_team.html.twig
@@ -1,18 +1,22 @@
 {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-<fieldset>
-    <legend>{% trans %}Attend{% endtrans %}</legend>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        {% trans %}Attend{% endtrans %}
+    </div>
 
-    <p>{% trans %}Click here to attend the team.{% endtrans %}</p>
+    <div class="panel-body">
+        <p>{% trans %}Click here to attend the team.{% endtrans %}</p>
 
-    <form class="form-horizontal">
-        <div class="form-actions">
-        {% if app.user.attend(schedule) %}
-            <a href="{{ path('club_team_team_unattend', { 'id':schedule.id }) }}" class="btn btn-error">{% trans %}Unattend{% endtrans %}</a>
-        {% else %}
-            <a href="{{ path('club_team_team_attend', { 'id':schedule.id }) }}" class="btn btn-primary">{% trans %}Attend{% endtrans %}</a>
-        {% endif %}
+        <form class="form-horizontal">
+            <div class="form-actions">
+                {% if app.user.attend(schedule) %}
+                <a onclick="return confirm('{% trans %}Are you sure?{% endtrans %}');" href="{{ path('club_team_team_unattend', { 'id':schedule.id }) }}" class="btn btn-danger">{% trans %}Unattend{% endtrans %}</a>
+                {% else %}
+                <a onclick="return confirm('{% trans %}Are you sure?{% endtrans %}');" href="{{ path('club_team_team_attend', { 'id':schedule.id }) }}" class="btn btn-primary">{% trans %}Attend{% endtrans %}</a>
+                {% endif %}
 
-        </div>
-    </form>
-</fieldset>
+            </div>
+        </form>
+    </div>
+</div>
 {% endif %}
