--- a/src/Club/BookingBundle/Resources/views/Booking/morePlayers.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/morePlayers.html.twig
@@ -1,11 +1,15 @@
-    <div class="col-sm-6">
-        <div class="well">
-        <h3>{% trans %}Booking{% endtrans %}</h3>
-        <form method="post" action="{{ path('club_booking_booking_addplayer', {'id':booking.id}) }}">
-        <p>{% trans %}You can add more players to this bookig here.{% endtrans %}</p>
-        {{ form_start(playerForm) }}
-        {{ form_widget(playerForm) }}
-        {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
-        {{ form_end(playerForm) }}
+<div class="col-sm-6">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            {% trans %}Booking{% endtrans %}
+        </div>
+        <div class="panel-body">
+            <form method="post" action="{{ path('club_booking_booking_addplayer', {'id':booking.id}) }}">
+                <p>{% trans %}You can add more players to this bookig here.{% endtrans %}</p>
+                {{ form_start(playerForm) }}
+                {{ form_widget(playerForm) }}
+                {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
+            {{ form_end(playerForm) }}
         </div>
     </div>
+</div>
