--- a/src/Club/UserBundle/Resources/views/Auth/login_form.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/login_form.html.twig
@@ -21,7 +21,7 @@
 
         {{ form_end(form) }}
 
-        <div style="clear: both;"></div>
+        <div class="clearfix"></div>
 
     </div>
 </div>
