--- a/src/Club/UserBundle/Resources/views/Auth/resetPassword.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/resetPassword.html.twig
@@ -17,7 +17,7 @@
 
         {{ form_end(form) }}
 
-        <div style="clear: both;"></div>
+        <div class="clearfix"></div>
 
     </div>
 </div>
