spelling correction learning to use git

--- a/src/Club/WeatherBundle/Resources/views/Weather/index.html.twig
+++ b/src/Club/WeatherBundle/Resources/views/Weather/index.html.twig
@@ -22,7 +22,7 @@ div#overview { display: none }
 {% block body %}
         <div class="span11" id="status">
             <div class="hero-unit">
-                <h3>{% trans %}Fetching weather informations from openweathermap.org...{% endtrans %}</h3>
+                <h3>{% trans %}Fetching weather information from openweathermap.org...{% endtrans %}</h3>
             </div>
         </div>
 
