--- a/src/Club/WelcomeBundle/Resources/views/Blog/show.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/show.html.twig
@@ -1,7 +1,7 @@
 {% extends "ClubWelcomeBundle::base.html.twig" %}
 
 {% block title %}
-Blog: {{ blog.title }}
+This Blog: {{ blog.title }}
 {% endblock %}
 
 {% block header %}
