--- a/src/Club/WelcomeBundle/Resources/views/Blog/show.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/show.html.twig
@@ -27,7 +27,7 @@ This Blog: {{ blog.title }}
 <h6>{% trans with {'%date%':comment.createdAt|club_datetime,'%author%':comment.user.name} %}Posted on %date% by %author%.{% endtrans %}</h6>
 <p>{{ comment.comment|raw }}</p>
 {% else %}
-<p>{% trans %}There are no comments for this blog.{% endtrans %}</p>
+<p>{% trans %}There are no new comments for this blog.{% endtrans %}</p>
 {% endfor %}
 
 {% endblock %}
